# b64tool

./: .gitignore  README.md  b64tool.py  pyproject.toml  requirements.txt  sample.txt  setup.py
src/: main.py
tests/: test_main.py
